# receipt-extract

./: .gitignore  LICENSE  README.md  eval_report.json  pyproject.toml  requirements-ui.txt  requirements.txt
data/golden/: easy_1.truth.json  easy_2.truth.json  easy_3.pred.json  easy_4.truth.json  easy_5.pred.json  hard_1.pred.json  hard_1.truth.json  hard_2.pred.json  hard_2.truth.json  qr_1.png.spc  qr_1.pred.json  qr_2.png.spc  qr_2.pred.json  qr_3.png.spc  qr_3.truth.json
src/receipt_extract/: cli.py  pipeline.py
src/receipt_extract/eval/: __init__.py  generate.py  harness.py  scoring.py
src/receipt_extract/extraction/: __init__.py  extractor.py  media.py  tool_schema.py
src/receipt_extract/models/: __init__.py  currency.py  receipt.py
src/receipt_extract/qrbill/: __init__.py  parser.py
src/receipt_extract/storage/: __init__.py  repository.py  schema.py
src/receipt_extract/webui/: __init__.py  app.py  render.py
tests/: test_eval.py  test_eval_harness.py  test_extraction.py  test_ingest.py  test_media.py  test_models.py  test_pipeline.py  test_qrbill.py  test_storage.py  test_webui.py
