[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-extract"
version = "0.1.0"
description = "Receipt/invoice extraction pipeline: image/PDF -> vision LLM -> validated structured data -> SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "anthropic>=0.39,<1",
    "pypdfium2>=4.30",
    "Pillow>=10.0",
]

[project.scripts]
receipt-extract = "receipt_extract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["receipt_extract"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
